<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NFCGallery</string>
    <string name="text_logo_splash">NFC Gallery</string>
    <!--Content Drawable-->
    <string name="text_imagen">Imagen</string>
    <!--Login Screen-->
    <string name="text_sign_up">Sign Up</string>
    <string name="text_its_easy">It\'s easier to sign up now</string>
    <string name="text_sign_up_google">Sign Up With Google</string>
    <string name="message_reading_nfc">Reading will begin when you tap a NFC compatible
        tag with back of your device</string>
    <string name="defaut_web_cliente_id" tools:ignore="TypographyDashes">
        734556105363-6rsf8unkjrjg6rlrvkpuq4tlcoojek6p.apps.googleusercontent.com</string>
    <!--Dialog-->
    <string name="textVerificando" tools:ignore="TypographyEllipsis">Verifying User Session ...</string>
    <string name="textMensajePorgressBar">Please wait</string>
    <!--TextView Test-->
    <string name="text_view_data">INFO READER FROM NCF TAG:</string>
    <!--No Data in the TAG-->
    <string name="text_no_Data">We\'re sorry, but this tag does not have any images stored</string>
    <string name="text_add_info_to_tag">Do you want to add an image?</string>
    <string name="text_yes">Yes</string>
    <string name="text_not">Not</string>
    <!--Gallery-->
    <string name="text_add_from">Add from</string>
    <string name="text_Camera">Camera</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_write_tag">Write TAG NFC</string>
    <!--Dialog Wirte NFC-->
    <string name="text_title_dialog">Ready to start the tag writing process</string>
    <string name="text_dialog">Writing will begin when you tap a NFC compatible tag with the back of your device</string>
    <!--Sign Out-->
    <string name="text_sign_out">Sign Out</string>
    <string name="text_title_sign_out">Do you really want to log out of the application?</string>

</resources>