<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) App desarrollada para el monografico #42 de la Universidad Autonoma De Santo Domingo
  ~   ~ Todos los derechos reservados se restrigen el uso de esta App sin el consentimiento de los desarrolladores o de las partes interesadas
  ~   ~ Santo Domingo, Republica Dominicana 2020-20201
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/icons">

    <TextView
        android:id="@+id/textViewNot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="24dp"
        android:text="@string/text_not"
        android:textColor="@color/design_default_color_error"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewYes"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginRight="20dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/text_no_Data"
        android:textAlignment="center"
        android:textColor="@color/ic_launcher_updt_background"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_add_info_to_tag"
        android:textColor="@color/ic_launcher_updt_background"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textViewYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="24dp"
        android:text="@string/text_yes"
        android:textColor="@color/primary_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginRight="28dp" />

</androidx.constraintlayout.widget.ConstraintLayout>