<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.imagegallery.GalleryActivity">

    <Button
        android:id="@+id/btnWriteTAG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_rect_shape_primay_color"
        android:fontFamily="@font/acme"
        android:text="@string/text_write_tag"
        android:textColor="@color/icons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:targetApi="jelly_bean" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_picture">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/text_add_from"
            android:textColor="@color/ic_launcher_updt_background"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--CardView Camara -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewCamara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.27"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.41000003"
            tools:ignore="KeyboardInaccessibleWidget">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/relativeLayoutEscaneo"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:background="@color/icons">

                <ImageView
                    android:id="@+id/imageViewEscanearrVin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/text_imagen"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_photo_camera_24" />

                <TextView
                    android:id="@+id/textCamara"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/alatsi"
                    android:gravity="center_horizontal"
                    android:text="@string/text_Camera"
                    android:textAlignment="center"
                    android:textColor="@color/ic_launcher_updt_background"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/imageViewEscanearrVin"
                    app:layout_constraintHorizontal_bias="0.34"
                    app:layout_constraintStart_toStartOf="@+id/imageViewEscanearrVin"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewEscanearrVin" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <!--CardView Gallery -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.36"
            app:layout_constraintStart_toEndOf="@+id/cardViewCamara"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="KeyboardInaccessibleWidget">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/relativeLayoutGallery"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:background="@color/icons">

                <ImageView
                    android:id="@+id/imageViewEscanearrVin2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/text_imagen"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_picture_in_picture_24" />

                <TextView
                    android:id="@+id/textGallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/alatsi"
                    android:gravity="center_horizontal"
                    android:text="@string/text_gallery"
                    android:textAlignment="center"
                    android:textColor="@color/ic_launcher_updt_background"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/imageViewEscanearrVin2"
                    app:layout_constraintHorizontal_bias="0.34"
                    app:layout_constraintStart_toStartOf="@+id/imageViewEscanearrVin2"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewEscanearrVin2" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layout_picture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="top"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgPicture"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginTop="0dp"
            app:srcCompat="@drawable/agregar_imagen_512" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>